Added sequence failsafes

--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "def Main():\n",
     "    #Get and validify sequence\n",
     "    valid_mRNA = True\n",
@@ -33,9 +34,11 @@
     "    if valid_mRNA == True:\n",
     "        print(\"It's good\")\n",
     "        print(mRNA_seq)\n",
-    "    else: print(\"You suck\")\n",
+    "    else: \n",
+    "        print(\"Sequence has invalid characters. Terminating program.\")\n",
+    "        return \"invalid\"\n",
     "                \n",
-    "    \n",
+    "    print(\"Looks at me, moving forward and stuff\")\n",
     "    \n",
     " \n",
     "\n",
@@ -45,40 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input your DNA or mRNA sequence: ayutckgffgkfgbck,djsbcolejndf\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "You suck\n"
+      "Please input your DNA or mRNA sequence: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\n",
+      "It's good\n",
+      "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\n",
+      "Looks at me, moving forward and stuff\n"
      ]
     }
    ],
    "source": [
-    "Main()"
+    "response = Main()"
    ]
   },
   {
