Some error handling

--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,11 @@
     "    #Get and validify sequence\n",
     "    valid_mRNA = True\n",
     "    seq = input(\"Please input your DNA or mRNA sequence: \")\n",
-    "    seq_str = str(seq)\n",
+    "    try:\n",
+    "        seq_str = str(seq)\n",
+    "    except: \n",
+    "        print(\"Sequence has invalid characters. Terminating program.\")\n",
+    "        return \"invalid\"\n",
     "    mRNA_seq = \"\"\n",
     "    \n",
     "    if ((seq_str.find(\"T\") != -1) or (seq_str.find(\"c\") != -1)\n",
@@ -48,17 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input your DNA or mRNA sequence: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\n",
-      "It's good\n",
-      "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\n",
-      "Looks at me, moving forward and stuff\n"
+      "Please input your DNA or mRNA sequence: !#$%^\n",
+      "WRONG\n",
+      "WRONG\n",
+      "WRONG\n",
+      "WRONG\n",
+      "WRONG\n",
+      "Sequence has invalid characters. Terminating program.\n"
      ]
     }
    ],
