Added Codon Templates

--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -42,8 +42,9 @@
     "        print(\"Sequence has invalid characters. Terminating program.\")\n",
     "        return \"invalid\"\n",
     "                \n",
-    "    print(\"Looks at me, moving forward and stuff\")\n",
-    "    \n",
+    "\n",
+    "    #import host codon sequence\n",
+    "    #sequences obtained from GenScript site\n",
     " \n",
     "\n",
     "\n",
