updated user input

--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,30 @@
     "    else: \n",
     "        print(\"Sequence has invalid characters. Terminating program.\")\n",
     "        return \"invalid\"\n",
+    "       \n",
+    "    seq_start = mRNA_seq.find(\"AUG\")\n",
+    "    if (seq_start == -1): \n",
+    "        print(\"This sequence has no start codon. Continue?\")\n",
+    "        seq_cont = input(\"[Y]es or [N]o: \" )\n",
+    "        if ((seq_cont == \"Y\") or (seq_cont == \"y\")\n",
+    "               or (seq_cont == \"N\") or (seq_cont == \"n\")):\n",
+    "            cont = True\n",
+    "        else: cont = False\n",
+    "        while (cont == False):\n",
+    "            seq_cont = input(\"Invalid response. Continue?\\n[Y]es or [N]o: \")\n",
+    "            if ((seq_cont == \"Y\") or (seq_cont == \"y\")\n",
+    "               or (seq_cont == \"N\") or (seq_cont == \"n\")):\n",
+    "                cont = True\n",
     "                \n",
+    "            print(str(cont))\n",
+    "        if ((seq_cont == \"N\") or (seq_cont == \"n\")):\n",
+    "            print(\"Terminating program.\")\n",
+    "            return \"invalid\"\n",
+    "        else: print(\"Proceeding.\")\n",
     "\n",
     "    #import host codon sequence\n",
     "    #sequences obtained from GenScript site\n",
-    " \n",
+    "    \n",
     "\n",
     "\n",
     "    "
@@ -53,20 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input your DNA or mRNA sequence: !#$%^\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "WRONG\n",
-      "Sequence has invalid characters. Terminating program.\n"
+      "Please input your DNA or mRNA sequence: \n",
+      "It's good\n",
+      "\n",
+      "This sequence has no start codon. Continue?\n",
+      "[Y]es or [N]o: y\n",
+      "Proceeding.\n"
      ]
     }
    ],
