More user input

--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,27 +64,115 @@
     "\n",
     "    #import host codon sequence\n",
     "    #sequences obtained from GenScript site\n",
+    "    try: \n",
+    "        print(\"Script executed from: \")\n",
+    "        print(os.path.dirname(os.path.realpath(\"Frequency Codon Optimizer.ipynb\")))\n",
+    "        path = os.path.dirname(os.path.realpath(\"Frequency Codon Optimizer.ipynb\"))\n",
+    "        print(\"The path is: \" + path)\n",
+    "    except:\n",
+    "        valid_path = False\n",
+    "        path = input(\"Couldn't find active directory for this script. Please input the active directory: \")\n",
+    "        while (valid_path == False):\n",
+    "            if (os.path.isdir(path) == False):\n",
+    "                path = input(\"Input directory was invalid, please try again or enter 'Q' to quit: \")\n",
+    "                if ((path == \"Q\") or (path == \"q\")): return \"invalid\"\n",
+    "            else: valid_path = True\n",
     "    \n",
-    "\n",
-    "\n",
-    "    "
+    "    print(\"Found directory. Moving Forward\")\n",
+    "    print(path + \"\\\\Template_Organisms\")\n",
+    "    if (os.path.isdir(path + \"\\\\Template_Organisms\") == True):\n",
+    "        path_files = path + \"\\\\Template_Organisms\"\n",
+    "        i = 1\n",
+    "        dir_items = []\n",
+    "        print(\"Found template folder, listing template files: \")\n",
+    "        for file in os.listdir(path_files):\n",
+    "            print(\"\\t\" + str(i) + \": \" + file)\n",
+    "            i+=1\n",
+    "            dir_items.append(file)\n",
+    "        \n",
+    "    else: \n",
+    "        print(\"Template_Organisms folder is not at listed directory. Terminating program.\")\n",
+    "        return \"invalid\"\n",
+    "    \n",
+    "    ##Select host organism\n",
+    "    host_codon_sel = input(\"Please input the number that corresponds with the host organism or 'Q' to quit: \")\n",
+    "    if ((host_codon_sel == \"Q\") or (host_codon_sel == \"q\")): return \"invalid\"\n",
+    "    host_codon_sel_valid = False\n",
+    "    while (host_codon_sel_valid == False):\n",
+    "        try: \n",
+    "            host_codon_int = int(host_codon_sel)\n",
+    "            if ((host_codon_int < (len(dir_items) + 1)) and (host_codon_int > 0)):\n",
+    "                host_codon_sel_valid = True\n",
+    "            else: \n",
+    "                host_codon_sel = input(\"\"\"Input was within the list range. Please input the number that \n",
+    "                corresponds with the host organism or 'Q' to quit: \"\"\")\n",
+    "        except: host_codon_sel = input(\"\"\"Input was not an integer. Please input the number that \n",
+    "        corresponds with the host organism or 'Q' to quit: \"\"\")\n",
+    "        if ((host_codon_sel== \"Q\") or (host_codon_sel == \"q\")): return \"invalid\"\n",
+    "        \n",
+    "    print(\"Selected host organism file: \" + dir_items[host_codon_int-1])\n",
+    "    host_codon = dir_items[host_codon_int-1]\n",
+    "         \n",
+    "    ##Select Target codon frequency\n",
+    "    targ_codon_sel = input(\"\"\"Please input the number that corresponds with the target organism \n",
+    "    codon frequency or 'Q' to quit: \"\"\")\n",
+    "    if ((targ_codon_sel == \"Q\") or (targ_codon_sel == \"q\")): return \"invalid\"\n",
+    "    targ_codon_sel_valid = False\n",
+    "    while (targ_codon_sel_valid == False):\n",
+    "        try: \n",
+    "            targ_codon_int = int(host_codon_sel)\n",
+    "            if ((targ_codon_int < (len(dir_items) + 1)) and (targ_codon_int > 0)):\n",
+    "                targ_codon_sel_valid = True\n",
+    "            else: \n",
+    "                targ_codon_sel = input(\"\"\"Input was within the list range. Please input the number that \n",
+    "                corresponds with the target organism codon frequency or 'Q' to quit: \"\"\")\n",
+    "        except: targ_codon_sel = input(\"\"\"Input was not an integer. Please input the number that \n",
+    "        corresponds with the target organism codon frequency or 'Q' to quit: \"\"\")\n",
+    "        if ((targ_codon_sel== \"Q\") or (targ_codon_sel == \"q\")): return \"invalid\"\n",
+    "        \n",
+    "    print(\"Selected target organism file: \" + dir_items[targ_codon_int-1])\n",
+    "    targ_codon = dir_items[targ_codon_int-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input your DNA or mRNA sequence: \n",
+      "Please input your DNA or mRNA sequence: ATG\n",
       "It's good\n",
-      "\n",
-      "This sequence has no start codon. Continue?\n",
-      "[Y]es or [N]o: y\n",
-      "Proceeding.\n"
+      "AUG\n",
+      "Script executed from: \n",
+      "C:\\Users\\Tim\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
+      "The path is: C:\\Users\\Tim\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
+      "Found directory. Moving Forward\n",
+      "C:\\Users\\Tim\\Documents\\GitHub\\Frequency_Codon_Optimizer\\Template_Organisms\n",
+      "Found template folder, listing template files: \n",
+      "\t1: Arabidopsis_thaliana.csv\n",
+      "\t2: Caenorhabditis_elegans.csv\n",
+      "\t3: Cricetulus_griseus.csv\n",
+      "\t4: Drosophila_melanogaster.csv\n",
+      "\t5: Escherichia_coli.csv\n",
+      "\t6: Human.csv\n",
+      "\t7: Insect.csv\n",
+      "\t8: Mouse.csv\n",
+      "\t9: Nicotiana_tabacum.csv\n",
+      "\t10: Pichia_pastoris.csv\n",
+      "\t11: Pig.csv\n",
+      "\t12: Rat.csv\n",
+      "\t13: Saccharomyces_cerevisiae.csv\n",
+      "\t14: Streptomyces.csv\n",
+      "\t15: Yeast.csv\n",
+      "\t16: Zae_mays.csv\n",
+      "Please input the number that corresponds with the host organism or 'Q' to quit: 2\n",
+      "Selected host organism file: Caenorhabditis_elegans.csv\n",
+      "Please input the number that corresponds with the target organism \n",
+      "    codon frequency or 'Q' to quit: 3\n",
+      "Selected host organism file: Caenorhabditis_elegans.csv\n"
      ]
     }
    ],
