--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,50 +93,55 @@
     "    else: \n",
     "        print(\"Template_Organisms folder is not at listed directory. Terminating program.\")\n",
     "        return \"invalid\"\n",
+    "    valid_codon_freq = False\n",
+    "    while (valid_codon_freq == False):\n",
+    "        ##Select host organism\n",
+    "        host_codon_sel = input(\"Please input the number that corresponds with the host organism or 'Q' to quit: \")\n",
+    "        if ((host_codon_sel == \"Q\") or (host_codon_sel == \"q\")): return \"invalid\"\n",
+    "        host_codon_sel_valid = False\n",
+    "        while (host_codon_sel_valid == False):\n",
+    "            try: \n",
+    "                host_codon_int = int(host_codon_sel)\n",
+    "                if ((host_codon_int < (len(dir_items) + 1)) and (host_codon_int > 0)):\n",
+    "                    host_codon_sel_valid = True\n",
+    "                else: \n",
+    "                    host_codon_sel = input(\"\"\"Input was not within the list range. Please input the number that \n",
+    "                    corresponds with the host organism or 'Q' to quit: \"\"\")\n",
+    "            except: host_codon_sel = input(\"\"\"Input was not an integer. Please input the number that \n",
+    "            corresponds with the host organism or 'Q' to quit: \"\"\")\n",
+    "            if ((host_codon_sel== \"Q\") or (host_codon_sel == \"q\")): return \"invalid\"\n",
+    "\n",
+    "        print(\"Selected host organism file: \" + dir_items[host_codon_int-1])\n",
+    "        host_codon = dir_items[host_codon_int-1]\n",
+    "\n",
+    "        ##Select Target codon frequency\n",
+    "        targ_codon_sel = input(\"\"\"Please input the number that corresponds with the target organism \n",
+    "        codon frequency or 'Q' to quit: \"\"\")\n",
+    "        if ((targ_codon_sel == \"Q\") or (targ_codon_sel == \"q\")): return \"invalid\"\n",
+    "        targ_codon_sel_valid = False\n",
+    "        while (targ_codon_sel_valid == False):\n",
+    "            try: \n",
+    "                targ_codon_int = int(targ_codon_sel)\n",
+    "                if ((targ_codon_int < (len(dir_items) + 1)) and (targ_codon_int > 0)):\n",
+    "                    targ_codon_sel_valid = True\n",
+    "                else: \n",
+    "                    targ_codon_sel = input(\"\"\"Input was not within the list range. Please input the number that \n",
+    "                    corresponds with the target organism codon frequency or 'Q' to quit: \"\"\")\n",
+    "            except: targ_codon_sel = input(\"\"\"Input was not an integer. Please input the number that \n",
+    "            corresponds with the target organism codon frequency or 'Q' to quit: \"\"\")\n",
+    "            if ((targ_codon_sel== \"Q\") or (targ_codon_sel == \"q\")): return \"invalid\"\n",
     "    \n",
-    "    ##Select host organism\n",
-    "    host_codon_sel = input(\"Please input the number that corresponds with the host organism or 'Q' to quit: \")\n",
-    "    if ((host_codon_sel == \"Q\") or (host_codon_sel == \"q\")): return \"invalid\"\n",
-    "    host_codon_sel_valid = False\n",
-    "    while (host_codon_sel_valid == False):\n",
-    "        try: \n",
-    "            host_codon_int = int(host_codon_sel)\n",
-    "            if ((host_codon_int < (len(dir_items) + 1)) and (host_codon_int > 0)):\n",
-    "                host_codon_sel_valid = True\n",
-    "            else: \n",
-    "                host_codon_sel = input(\"\"\"Input was within the list range. Please input the number that \n",
-    "                corresponds with the host organism or 'Q' to quit: \"\"\")\n",
-    "        except: host_codon_sel = input(\"\"\"Input was not an integer. Please input the number that \n",
-    "        corresponds with the host organism or 'Q' to quit: \"\"\")\n",
-    "        if ((host_codon_sel== \"Q\") or (host_codon_sel == \"q\")): return \"invalid\"\n",
+    "        print(\"Selected target organism file: \" + dir_items[targ_codon_int-1])\n",
+    "        targ_codon = dir_items[targ_codon_int-1]\n",
     "        \n",
-    "    print(\"Selected host organism file: \" + dir_items[host_codon_int-1])\n",
-    "    host_codon = dir_items[host_codon_int-1]\n",
-    "         \n",
-    "    ##Select Target codon frequency\n",
-    "    targ_codon_sel = input(\"\"\"Please input the number that corresponds with the target organism \n",
-    "    codon frequency or 'Q' to quit: \"\"\")\n",
-    "    if ((targ_codon_sel == \"Q\") or (targ_codon_sel == \"q\")): return \"invalid\"\n",
-    "    targ_codon_sel_valid = False\n",
-    "    while (targ_codon_sel_valid == False):\n",
-    "        try: \n",
-    "            targ_codon_int = int(host_codon_sel)\n",
-    "            if ((targ_codon_int < (len(dir_items) + 1)) and (targ_codon_int > 0)):\n",
-    "                targ_codon_sel_valid = True\n",
-    "            else: \n",
-    "                targ_codon_sel = input(\"\"\"Input was within the list range. Please input the number that \n",
-    "                corresponds with the target organism codon frequency or 'Q' to quit: \"\"\")\n",
-    "        except: targ_codon_sel = input(\"\"\"Input was not an integer. Please input the number that \n",
-    "        corresponds with the target organism codon frequency or 'Q' to quit: \"\"\")\n",
-    "        if ((targ_codon_sel== \"Q\") or (targ_codon_sel == \"q\")): return \"invalid\"\n",
-    "        \n",
-    "    print(\"Selected target organism file: \" + dir_items[targ_codon_int-1])\n",
-    "    targ_codon = dir_items[targ_codon_int-1]"
+    "        if (targ_codon_int == host_codon_int): \n",
+    "            print(\"The selected host and target organisms are the same.\\nPlease select 2 different organisms.\")\n",
+    "        else: valid_codon_freq = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -147,10 +152,10 @@
       "It's good\n",
       "AUG\n",
       "Script executed from: \n",
-      "C:\\Users\\Tim\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
-      "The path is: C:\\Users\\Tim\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
+      "C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
+      "The path is: C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
       "Found directory. Moving Forward\n",
-      "C:\\Users\\Tim\\Documents\\GitHub\\Frequency_Codon_Optimizer\\Template_Organisms\n",
+      "C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\\Template_Organisms\n",
       "Found template folder, listing template files: \n",
       "\t1: Arabidopsis_thaliana.csv\n",
       "\t2: Caenorhabditis_elegans.csv\n",
@@ -168,11 +173,18 @@
       "\t14: Streptomyces.csv\n",
       "\t15: Yeast.csv\n",
       "\t16: Zae_mays.csv\n",
+      "Please input the number that corresponds with the host organism or 'Q' to quit: 1\n",
+      "Selected host organism file: Arabidopsis_thaliana.csv\n",
+      "Please input the number that corresponds with the target organism \n",
+      "        codon frequency or 'Q' to quit: 1\n",
+      "Selected target organism file: Arabidopsis_thaliana.csv\n",
+      "The selected host and target organisms are the same.\n",
+      "Please select 2 different organisms.\n",
       "Please input the number that corresponds with the host organism or 'Q' to quit: 2\n",
       "Selected host organism file: Caenorhabditis_elegans.csv\n",
       "Please input the number that corresponds with the target organism \n",
-      "    codon frequency or 'Q' to quit: 3\n",
-      "Selected host organism file: Caenorhabditis_elegans.csv\n"
+      "        codon frequency or 'Q' to quit: 3\n",
+      "Selected target organism file: Cricetulus_griseus.csv\n"
      ]
     }
    ],
