--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,12 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "def Main():\n",
+    "    print(\"\"\"\\tWelcome to the Codon Frequency Optimizer! For easiest use, ensure that\n",
+    "    you are running the program from its original folder! \n",
+    "    ****NOTE: Make sure the sequence you are optimizing begins with the first\n",
+    "    nucleotide and is in the correct reading frame!****\"\"\")\n",
+    "\n",
     "    #Get and validify sequence\n",
     "    valid_mRNA = True\n",
     "    seq = input(\"Please input your DNA or mRNA sequence: \")\n",
@@ -24,7 +30,7 @@
     "        for char in seq_str:\n",
     "            if ((char == \"T\") or (char ==\"t\")\n",
     "                or (char == \"u\")):\n",
-    "                mRNA_seq += \"U\";\n",
+    "                mRNA_seq += \"U\"\n",
     "            elif (char == \"g\"): mRNA_seq += \"G\"\n",
     "            elif (char == \"c\"): mRNA_seq += \"C\"\n",
     "            elif (char == \"a\"): mRNA_seq += \"A\"\n",
@@ -141,50 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input your DNA or mRNA sequence: ATG\n",
-      "It's good\n",
-      "AUG\n",
-      "Script executed from: \n",
-      "C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
-      "The path is: C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
-      "Found directory. Moving Forward\n",
-      "C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\\Template_Organisms\n",
-      "Found template folder, listing template files: \n",
-      "\t1: Arabidopsis_thaliana.csv\n",
-      "\t2: Caenorhabditis_elegans.csv\n",
-      "\t3: Cricetulus_griseus.csv\n",
-      "\t4: Drosophila_melanogaster.csv\n",
-      "\t5: Escherichia_coli.csv\n",
-      "\t6: Human.csv\n",
-      "\t7: Insect.csv\n",
-      "\t8: Mouse.csv\n",
-      "\t9: Nicotiana_tabacum.csv\n",
-      "\t10: Pichia_pastoris.csv\n",
-      "\t11: Pig.csv\n",
-      "\t12: Rat.csv\n",
-      "\t13: Saccharomyces_cerevisiae.csv\n",
-      "\t14: Streptomyces.csv\n",
-      "\t15: Yeast.csv\n",
-      "\t16: Zae_mays.csv\n",
-      "Please input the number that corresponds with the host organism or 'Q' to quit: 1\n",
-      "Selected host organism file: Arabidopsis_thaliana.csv\n",
-      "Please input the number that corresponds with the target organism \n",
-      "        codon frequency or 'Q' to quit: 1\n",
-      "Selected target organism file: Arabidopsis_thaliana.csv\n",
-      "The selected host and target organisms are the same.\n",
-      "Please select 2 different organisms.\n",
-      "Please input the number that corresponds with the host organism or 'Q' to quit: 2\n",
-      "Selected host organism file: Caenorhabditis_elegans.csv\n",
-      "Please input the number that corresponds with the target organism \n",
-      "        codon frequency or 'Q' to quit: 3\n",
-      "Selected target organism file: Cricetulus_griseus.csv\n"
+      "\tWelcome to the Codon Frequency Optimizer! For easiest use, ensure that\n",
+      "    you are running the program from its original folder! \n",
+      "    ****NOTE: Make sure the sequence you are optimizing begins with the first\n",
+      "    nucleotide and is in the correct reading frame!****\n"
      ]
     }
    ],
@@ -193,11 +166,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   },
   {
    "cell_type": "code",
