--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
     "def Main():\n",
-    "    print(\"\"\"\\tWelcome to the Codon Frequency Optimizer! For easiest use, ensure that\n",
+    "    print(\"\"\"Welcome to the Codon Frequency Optimizer! For easiest use, ensure that\n",
     "    you are running the program from its original folder! \n",
     "    ****NOTE: Make sure the sequence you are optimizing begins with the first\n",
     "    nucleotide and is in the correct reading frame!****\"\"\")\n",
@@ -149,18 +149,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tWelcome to the Codon Frequency Optimizer! For easiest use, ensure that\n",
-      "    you are running the program from its original folder! \n",
-      "    ****NOTE: Make sure the sequence you are optimizing begins with the first\n",
-      "    nucleotide and is in the correct reading frame!****\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = Main()"
    ]
