--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
+    "import csv\n",
     "def Main():\n",
     "    print(\"\"\"Welcome to the Codon Frequency Optimizer! For easiest use, ensure that\n",
     "    you are running the program from its original folder! \n",
@@ -142,14 +145,77 @@
     "        \n",
     "        if (targ_codon_int == host_codon_int): \n",
     "            print(\"The selected host and target organisms are the same.\\nPlease select 2 different organisms.\")\n",
-    "        else: valid_codon_freq = True"
+    "        else: valid_codon_freq = True\n",
+    "    \n",
+    "    host_file_path = path_files + \"\\\\\" + dir_items[host_codon_int-1]\n",
+    "    targ_file_path = path_files + \"\\\\\" + dir_items[targ_codon_int-1]\n",
+    "    \n",
+    "    print(\"Host file path is: \" + host_file_path)\n",
+    "    print(\"Target file path is: \" + targ_file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Codon Frequency Optimizer! For easiest use, ensure that\n",
+      "    you are running the program from its original folder! \n",
+      "    ****NOTE: Make sure the sequence you are optimizing begins with the first\n",
+      "    nucleotide and is in the correct reading frame!****\n",
+      "Please input your DNA or mRNA sequence: AAAAAAAAAAAAAAA\n",
+      "It's good\n",
+      "AAAAAAAAAAAAAAA\n",
+      "This sequence has no start codon. Continue?\n",
+      "[Y]es or [N]o: Y\n",
+      "Proceeding.\n",
+      "Script executed from: \n",
+      "C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
+      "The path is: C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
+      "Found directory. Moving Forward\n",
+      "C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\\Template_Organisms\n",
+      "Found template folder, listing template files: \n",
+      "\t1: Arabidopsis_thaliana.csv\n",
+      "\t2: Caenorhabditis_elegans.csv\n",
+      "\t3: Cricetulus_griseus.csv\n",
+      "\t4: Drosophila_melanogaster.csv\n",
+      "\t5: Escherichia_coli.csv\n",
+      "\t6: Human.csv\n",
+      "\t7: Insect.csv\n",
+      "\t8: Mouse.csv\n",
+      "\t9: Nicotiana_tabacum.csv\n",
+      "\t10: Pichia_pastoris.csv\n",
+      "\t11: Pig.csv\n",
+      "\t12: Rat.csv\n",
+      "\t13: Saccharomyces_cerevisiae.csv\n",
+      "\t14: Streptomyces.csv\n",
+      "\t15: Yeast.csv\n",
+      "\t16: Zae_mays.csv\n",
+      "Please input the number that corresponds with the host organism or 'Q' to quit: N\n",
+      "Input was not an integer. Please input the number that \n",
+      "            corresponds with the host organism or 'Q' to quit: 1\n",
+      "Selected host organism file: Arabidopsis_thaliana.csv\n",
+      "Please input the number that corresponds with the target organism \n",
+      "        codon frequency or 'Q' to quit: 1\n",
+      "Selected target organism file: Arabidopsis_thaliana.csv\n",
+      "The selected host and target organisms are the same.\n",
+      "Please select 2 different organisms.\n",
+      "Please input the number that corresponds with the host organism or 'Q' to quit: 2\n",
+      "Selected host organism file: Caenorhabditis_elegans.csv\n",
+      "Please input the number that corresponds with the target organism \n",
+      "        codon frequency or 'Q' to quit: 3\n",
+      "Selected target organism file: Cricetulus_griseus.csv\n",
+      "Host file path is: C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\\Template_Organisms\\Caenorhabditis_elegans.csv\n",
+      "Target file path is: C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\\Template_Organisms\\Cricetulus_griseus.csv\n"
+     ]
+    }
+   ],
    "source": [
     "response = Main()"
    ]
@@ -157,14 +223,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    " "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   }
