Retrieves info from csv

--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -27,20 +27,20 @@
     "        return \"invalid\"\n",
     "    mRNA_seq = \"\"\n",
     "    \n",
-    "    if ((seq_str.find(\"T\") != -1) or (seq_str.find(\"c\") != -1)\n",
+    "    if ((seq_str.find(\"U\") != -1) or (seq_str.find(\"c\") != -1)\n",
     "        or (seq_str.find(\"a\") != -1) or (seq_str.find(\"g\") != -1)\n",
-    "        or (seq_str.find(\"t\") != -1)):\n",
+    "        or (seq_str.find(\"u\") != -1)):\n",
     "        for char in seq_str:\n",
-    "            if ((char == \"T\") or (char ==\"t\")\n",
-    "                or (char == \"u\")):\n",
-    "                mRNA_seq += \"U\"\n",
+    "            if ((char == \"U\") or (char ==\"u\")\n",
+    "                or (char == \"t\")):\n",
+    "                mRNA_seq += \"T\"\n",
     "            elif (char == \"g\"): mRNA_seq += \"G\"\n",
     "            elif (char == \"c\"): mRNA_seq += \"C\"\n",
     "            elif (char == \"a\"): mRNA_seq += \"A\"\n",
     "            else: mRNA_seq += char\n",
     "    else: mRNA_seq = seq #if no typing corrections\n",
     "    for char in mRNA_seq:\n",
-    "        if ((char != \"A\") and (char != \"U\")\n",
+    "        if ((char != \"A\") and (char != \"T\")\n",
     "            and (char != \"C\") and (char !=\"G\")):\n",
     "            valid_mRNA = False\n",
     "            print(\"WRONG\")\n",
@@ -150,13 +150,39 @@
     "    host_file_path = path_files + \"\\\\\" + dir_items[host_codon_int-1]\n",
     "    targ_file_path = path_files + \"\\\\\" + dir_items[targ_codon_int-1]\n",
     "    \n",
-    "    print(\"Host file path is: \" + host_file_path)\n",
-    "    print(\"Target file path is: \" + targ_file_path)"
+    "    #store file contents in parallel arrays\n",
+    "    with open(host_file_path, \"rt\") as x:\n",
+    "        reader = csv.DictReader(x)\n",
+    "        host_codons = [row[\"Triplet\"]for row in reader]\n",
+    "        x.close()\n",
+    "    with open(host_file_path, \"rt\") as x:\n",
+    "        reader = csv.DictReader(x)\n",
+    "        host_aa = [row[\"Amino acid\"] for row in reader]\n",
+    "        x.close()\n",
+    "    with open(host_file_path, \"rt\") as x:\n",
+    "        reader = csv.DictReader(x)\n",
+    "        host_freqs = [row[\"Fraction\"] for row in reader]\n",
+    "        x.close()\n",
+    "    with open(targ_file_path, \"rt\") as x:\n",
+    "        reader = csv.DictReader(x)\n",
+    "        targ_codons = [row[\"Triplet\"]for row in reader]\n",
+    "        x.close()\n",
+    "    with open(targ_file_path, \"rt\") as x:\n",
+    "        reader = csv.DictReader(x)\n",
+    "        targ_aa = [row[\"Amino acid\"] for row in reader]\n",
+    "        x.close()\n",
+    "    with open(targ_file_path, \"rt\") as x:\n",
+    "        reader = csv.DictReader(x)\n",
+    "        targ_freqs = [row[\"Fraction\"] for row in reader]\n",
+    "        x.close()\n",
+    "        \n",
+    "    print(host_codons,host_aa, host_freqs)\n",
+    "    print(targ_codons,targ_aa,targ_freqs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -169,11 +195,11 @@
       "    you are running the program from its original folder! \n",
       "    ****NOTE: Make sure the sequence you are optimizing begins with the first\n",
       "    nucleotide and is in the correct reading frame!****\n",
-      "Please input your DNA or mRNA sequence: AAAAAAAAAAAAAAA\n",
+      "Please input your DNA or mRNA sequence: ATGATGATG\n",
       "It's good\n",
-      "AAAAAAAAAAAAAAA\n",
+      "ATGATGATG\n",
       "This sequence has no start codon. Continue?\n",
-      "[Y]es or [N]o: Y\n",
+      "[Y]es or [N]o: y\n",
       "Proceeding.\n",
       "Script executed from: \n",
       "C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
@@ -197,22 +223,13 @@
       "\t14: Streptomyces.csv\n",
       "\t15: Yeast.csv\n",
       "\t16: Zae_mays.csv\n",
-      "Please input the number that corresponds with the host organism or 'Q' to quit: N\n",
-      "Input was not an integer. Please input the number that \n",
-      "            corresponds with the host organism or 'Q' to quit: 1\n",
-      "Selected host organism file: Arabidopsis_thaliana.csv\n",
+      "Please input the number that corresponds with the host organism or 'Q' to quit: 10\n",
+      "Selected host organism file: Pichia_pastoris.csv\n",
       "Please input the number that corresponds with the target organism \n",
-      "        codon frequency or 'Q' to quit: 1\n",
-      "Selected target organism file: Arabidopsis_thaliana.csv\n",
-      "The selected host and target organisms are the same.\n",
-      "Please select 2 different organisms.\n",
-      "Please input the number that corresponds with the host organism or 'Q' to quit: 2\n",
-      "Selected host organism file: Caenorhabditis_elegans.csv\n",
-      "Please input the number that corresponds with the target organism \n",
-      "        codon frequency or 'Q' to quit: 3\n",
-      "Selected target organism file: Cricetulus_griseus.csv\n",
-      "Host file path is: C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\\Template_Organisms\\Caenorhabditis_elegans.csv\n",
-      "Target file path is: C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\\Template_Organisms\\Cricetulus_griseus.csv\n"
+      "        codon frequency or 'Q' to quit: 6\n",
+      "Selected target organism file: Human.csv\n",
+      "['TTT', 'TTC', 'TTA', 'TTG', 'TAT', 'TAC', 'TAA', 'TAG', 'CTT', 'CTC', 'CTA', 'CTG', 'CAT', 'CAC', 'CAA', 'CAG', 'ATT', 'ATC', 'ATA', 'ATG', 'AAT', 'AAC', 'AAA', 'AAG', 'GTT', 'GTC', 'GTA', 'GTG', 'GAT', 'GAC', 'GAA', 'GAG', 'TCT', 'TCC', 'TCA', 'TCG', 'TGT', 'TGC', 'TGA', 'TGG', 'CCT', 'CCC', 'CCA', 'CCG', 'CGT', 'CGC', 'CGA', 'CGG', 'ACT', 'ACC', 'ACA', 'ACG', 'AGT', 'AGC', 'AGA', 'AGG', 'GCT', 'GCC', 'GCA', 'GCG', 'GGT', 'GGC', 'GGA', 'GGG'] ['F', 'F', 'L', 'L', 'Y', 'Y', '*', '*', 'L', 'L', 'L', 'L', 'H', 'H', 'Q', 'Q', 'I', 'I', 'I', 'M', 'N', 'N', 'K', 'K', 'V', 'V', 'V', 'V', 'D', 'D', 'E', 'E', 'S', 'S', 'S', 'S', 'C', 'C', '*', 'W', 'P', 'P', 'P', 'P', 'R', 'R', 'R', 'R', 'T', 'T', 'T', 'T', 'S', 'S', 'R', 'R', 'A', 'A', 'A', 'A', 'G', 'G', 'G', 'G'] ['0.56', '0.44', '0.15', '0.33', '0.45', '0.55', '0.53', '0.29', '0.17', '0.08', '0.12', '0.16', '0.54', '0.46', '0.62', '0.38', '0.51', '0.31', '0.18', '1', '0.48', '0.52', '0.47', '0.53', '0.42', '0.23', '0.16', '0.2', '0.59', '0.41', '0.58', '0.42', '0.29', '0.2', '0.19', '0.09', '0.65', '0.35', '0.18', '1', '0.35', '0.16', '0.4', '0.1', '0.16', '0.05', '0.11', '0.05', '0.4', '0.24', '0.25', '0.11', '0.15', '0.09', '0.47', '0.16', '0.45', '0.25', '0.24', '0.06', '0.43', '0.14', '0.32', '0.1']\n",
+      "['TTT', 'TTC', 'TTA', 'TTG', 'TAT', 'TAC', 'TAA', 'TAG', 'CTT', 'CTC', 'CTA', 'CTG', 'CAT', 'CAC', 'CAA', 'CAG', 'ATT', 'ATC', 'ATA', 'ATG', 'AAT', 'AAC', 'AAA', 'AAG', 'GTT', 'GTC', 'GTA', 'GTG', 'GAT', 'GAC', 'GAA', 'GAG', 'TCT', 'TCC', 'TCA', 'TCG', 'TGT', 'TGC', 'TGA', 'TGG', 'CCT', 'CCC', 'CCA', 'CCG', 'CGT', 'CGC', 'CGA', 'CGG', 'ACT', 'ACC', 'ACA', 'ACG', 'AGT', 'AGC', 'AGA', 'AGG', 'GCT', 'GCC', 'GCA', 'GCG', 'GGT', 'GGC', 'GGA', 'GGG'] ['F', 'F', 'L', 'L', 'Y', 'Y', '*', '*', 'L', 'L', 'L', 'L', 'H', 'H', 'Q', 'Q', 'I', 'I', 'I', 'M', 'N', 'N', 'K', 'K', 'V', 'V', 'V', 'V', 'D', 'D', 'E', 'E', 'S', 'S', 'S', 'S', 'C', 'C', '*', 'W', 'P', 'P', 'P', 'P', 'R', 'R', 'R', 'R', 'T', 'T', 'T', 'T', 'S', 'S', 'R', 'R', 'A', 'A', 'A', 'A', 'G', 'G', 'G', 'G'] ['0.56', '0.44', '0.15', '0.33', '0.45', '0.55', '0.53', '0.29', '0.17', '0.08', '0.12', '0.16', '0.54', '0.46', '0.62', '0.38', '0.51', '0.31', '0.18', '1', '0.48', '0.52', '0.47', '0.53', '0.42', '0.23', '0.16', '0.2', '0.59', '0.41', '0.58', '0.42', '0.29', '0.2', '0.19', '0.09', '0.65', '0.35', '0.18', '1', '0.35', '0.16', '0.4', '0.1', '0.16', '0.05', '0.11', '0.05', '0.4', '0.24', '0.25', '0.11', '0.15', '0.09', '0.47', '0.16', '0.45', '0.25', '0.24', '0.06', '0.43', '0.14', '0.32', '0.1']\n"
      ]
     }
    ],
@@ -221,16 +238,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
