Converts seq to aa string

--- a/Frequency Codon Optimizer.ipynb
+++ b/Frequency Codon Optimizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -51,7 +51,7 @@
     "        print(\"Sequence has invalid characters. Terminating program.\")\n",
     "        return \"invalid\"\n",
     "       \n",
-    "    seq_start = mRNA_seq.find(\"AUG\")\n",
+    "    seq_start = mRNA_seq.find(\"ATG\")\n",
     "    if (seq_start == -1): \n",
     "        print(\"This sequence has no start codon. Continue?\")\n",
     "        seq_cont = input(\"[Y]es or [N]o: \" )\n",
@@ -177,12 +177,27 @@
     "        x.close()\n",
     "        \n",
     "    print(host_codons,host_aa, host_freqs)\n",
-    "    print(targ_codons,targ_aa,targ_freqs)"
+    "    print(targ_codons,targ_aa,targ_freqs)\n",
+    "    \n",
+    "    ## convert original sequence to AA and store frequencies\n",
+    "    seq_len = len(mRNA_seq)\n",
+    "    curr_codon = \"\"\n",
+    "    new_aa_seq = \"\"\n",
+    "    for i in range(0,seq_len-1):\n",
+    "        curr_codon += mRNA_seq[i]\n",
+    "        if (len(curr_codon) == 3):\n",
+    "            for index, j in enumerate(host_codons):\n",
+    "                if curr_codon == j:\n",
+    "                    new_aa_seq += host_aa[index]\n",
+    "                    break;\n",
+    "                    \n",
+    "            curr_codon = \"\"\n",
+    "    print(\"The current seq is: \" + new_aa_seq)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -195,11 +210,11 @@
       "    you are running the program from its original folder! \n",
       "    ****NOTE: Make sure the sequence you are optimizing begins with the first\n",
       "    nucleotide and is in the correct reading frame!****\n",
-      "Please input your DNA or mRNA sequence: ATGATGATG\n",
+      "Please input your DNA or mRNA sequence: ATGATGATGATGATGATGATGAA\n",
       "It's good\n",
-      "ATGATGATG\n",
+      "ATGATGATGATGATGATGATGAA\n",
       "This sequence has no start codon. Continue?\n",
-      "[Y]es or [N]o: y\n",
+      "[Y]es or [N]o: Y\n",
       "Proceeding.\n",
       "Script executed from: \n",
       "C:\\Users\\tlorg\\Documents\\GitHub\\Frequency_Codon_Optimizer\n",
@@ -229,7 +244,8 @@
       "        codon frequency or 'Q' to quit: 6\n",
       "Selected target organism file: Human.csv\n",
       "['TTT', 'TTC', 'TTA', 'TTG', 'TAT', 'TAC', 'TAA', 'TAG', 'CTT', 'CTC', 'CTA', 'CTG', 'CAT', 'CAC', 'CAA', 'CAG', 'ATT', 'ATC', 'ATA', 'ATG', 'AAT', 'AAC', 'AAA', 'AAG', 'GTT', 'GTC', 'GTA', 'GTG', 'GAT', 'GAC', 'GAA', 'GAG', 'TCT', 'TCC', 'TCA', 'TCG', 'TGT', 'TGC', 'TGA', 'TGG', 'CCT', 'CCC', 'CCA', 'CCG', 'CGT', 'CGC', 'CGA', 'CGG', 'ACT', 'ACC', 'ACA', 'ACG', 'AGT', 'AGC', 'AGA', 'AGG', 'GCT', 'GCC', 'GCA', 'GCG', 'GGT', 'GGC', 'GGA', 'GGG'] ['F', 'F', 'L', 'L', 'Y', 'Y', '*', '*', 'L', 'L', 'L', 'L', 'H', 'H', 'Q', 'Q', 'I', 'I', 'I', 'M', 'N', 'N', 'K', 'K', 'V', 'V', 'V', 'V', 'D', 'D', 'E', 'E', 'S', 'S', 'S', 'S', 'C', 'C', '*', 'W', 'P', 'P', 'P', 'P', 'R', 'R', 'R', 'R', 'T', 'T', 'T', 'T', 'S', 'S', 'R', 'R', 'A', 'A', 'A', 'A', 'G', 'G', 'G', 'G'] ['0.56', '0.44', '0.15', '0.33', '0.45', '0.55', '0.53', '0.29', '0.17', '0.08', '0.12', '0.16', '0.54', '0.46', '0.62', '0.38', '0.51', '0.31', '0.18', '1', '0.48', '0.52', '0.47', '0.53', '0.42', '0.23', '0.16', '0.2', '0.59', '0.41', '0.58', '0.42', '0.29', '0.2', '0.19', '0.09', '0.65', '0.35', '0.18', '1', '0.35', '0.16', '0.4', '0.1', '0.16', '0.05', '0.11', '0.05', '0.4', '0.24', '0.25', '0.11', '0.15', '0.09', '0.47', '0.16', '0.45', '0.25', '0.24', '0.06', '0.43', '0.14', '0.32', '0.1']\n",
-      "['TTT', 'TTC', 'TTA', 'TTG', 'TAT', 'TAC', 'TAA', 'TAG', 'CTT', 'CTC', 'CTA', 'CTG', 'CAT', 'CAC', 'CAA', 'CAG', 'ATT', 'ATC', 'ATA', 'ATG', 'AAT', 'AAC', 'AAA', 'AAG', 'GTT', 'GTC', 'GTA', 'GTG', 'GAT', 'GAC', 'GAA', 'GAG', 'TCT', 'TCC', 'TCA', 'TCG', 'TGT', 'TGC', 'TGA', 'TGG', 'CCT', 'CCC', 'CCA', 'CCG', 'CGT', 'CGC', 'CGA', 'CGG', 'ACT', 'ACC', 'ACA', 'ACG', 'AGT', 'AGC', 'AGA', 'AGG', 'GCT', 'GCC', 'GCA', 'GCG', 'GGT', 'GGC', 'GGA', 'GGG'] ['F', 'F', 'L', 'L', 'Y', 'Y', '*', '*', 'L', 'L', 'L', 'L', 'H', 'H', 'Q', 'Q', 'I', 'I', 'I', 'M', 'N', 'N', 'K', 'K', 'V', 'V', 'V', 'V', 'D', 'D', 'E', 'E', 'S', 'S', 'S', 'S', 'C', 'C', '*', 'W', 'P', 'P', 'P', 'P', 'R', 'R', 'R', 'R', 'T', 'T', 'T', 'T', 'S', 'S', 'R', 'R', 'A', 'A', 'A', 'A', 'G', 'G', 'G', 'G'] ['0.56', '0.44', '0.15', '0.33', '0.45', '0.55', '0.53', '0.29', '0.17', '0.08', '0.12', '0.16', '0.54', '0.46', '0.62', '0.38', '0.51', '0.31', '0.18', '1', '0.48', '0.52', '0.47', '0.53', '0.42', '0.23', '0.16', '0.2', '0.59', '0.41', '0.58', '0.42', '0.29', '0.2', '0.19', '0.09', '0.65', '0.35', '0.18', '1', '0.35', '0.16', '0.4', '0.1', '0.16', '0.05', '0.11', '0.05', '0.4', '0.24', '0.25', '0.11', '0.15', '0.09', '0.47', '0.16', '0.45', '0.25', '0.24', '0.06', '0.43', '0.14', '0.32', '0.1']\n"
+      "['TTT', 'TTC', 'TTA', 'TTG', 'TAT', 'TAC', 'TAA', 'TAG', 'CTT', 'CTC', 'CTA', 'CTG', 'CAT', 'CAC', 'CAA', 'CAG', 'ATT', 'ATC', 'ATA', 'ATG', 'AAT', 'AAC', 'AAA', 'AAG', 'GTT', 'GTC', 'GTA', 'GTG', 'GAT', 'GAC', 'GAA', 'GAG', 'TCT', 'TCC', 'TCA', 'TCG', 'TGT', 'TGC', 'TGA', 'TGG', 'CCT', 'CCC', 'CCA', 'CCG', 'CGT', 'CGC', 'CGA', 'CGG', 'ACT', 'ACC', 'ACA', 'ACG', 'AGT', 'AGC', 'AGA', 'AGG', 'GCT', 'GCC', 'GCA', 'GCG', 'GGT', 'GGC', 'GGA', 'GGG'] ['F', 'F', 'L', 'L', 'Y', 'Y', '*', '*', 'L', 'L', 'L', 'L', 'H', 'H', 'Q', 'Q', 'I', 'I', 'I', 'M', 'N', 'N', 'K', 'K', 'V', 'V', 'V', 'V', 'D', 'D', 'E', 'E', 'S', 'S', 'S', 'S', 'C', 'C', '*', 'W', 'P', 'P', 'P', 'P', 'R', 'R', 'R', 'R', 'T', 'T', 'T', 'T', 'S', 'S', 'R', 'R', 'A', 'A', 'A', 'A', 'G', 'G', 'G', 'G'] ['0.45', '0.55', '0.07', '0.13', '0.43', '0.57', '0.28', '0.2', '0.13', '0.2', '0.07', '0.41', '0.41', '0.59', '0.25', '0.75', '0.36', '0.48', '0.16', '1', '0.46', '0.54', '0.42', '0.58', '0.18', '0.24', '0.11', '0.47', '0.46', '0.54', '0.42', '0.58', '0.18', '0.22', '0.15', '0.06', '0.45', '0.55', '0.52', '1', '0.28', '0.33', '0.27', '0.11', '0.08', '0.19', '0.11', '0.21', '0.24', '0.36', '0.28', '0.12', '0.15', '0.24', '0.2', '0.2', '0.26', '0.4', '0.23', '0.11', '0.16', '0.34', '0.25', '0.25']\n",
+      "The current seq is: MMMMMMM\n"
      ]
     }
    ],
